[project]
name = "fluseqdb"
description = "Make and interact with curated influenza sequences."
version = "0.0.1"
authors = [{ name = "David Pattinson", email = "david.pattinson@wisc.edu" }]
dependencies = ["biopython", "pandas", "dendropy"]

[tool.setuptools]
packages = ["fluseqdb"]

[project.optional-dependencies]
dev = ["pytest", "pyflakes", "pycodestyle"]

[project.scripts]
fs_addseqs = "fluseqdb.add:main"
fs_addmeta = "fluseqdb.add_metadata:main"
fs_check = "fluseqdb.check:main"
fs_dumpmeta = "fluseqdb.dump_metadata:main"
fs_dumpseqs = "fluseqdb.dump_seqs:main"
fs_dumpseqs_clade = "fluseqdb.dump_seqs_clade:main"
